added image static renderering, fixed image path, fixed meal endpoint to meals
